force-app/main/default/objects/Lead/fields/Ship_to_Party_Same_as_Sold_to_Party__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Party_Same_as_Sold_to_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship to Party Same as Sold to Party</label>
    <type>Checkbox</type>
</CustomField>