force-app/main/default/objects/Lead/fields/Shipping__c.field-meta.xml
<CustomField>
    <fullName>Shipping__c</fullName>
    <label>Shipping Address</label>
    <type>Address</type>
</CustomField>