force-app/main/default/objects/Lead/fields/Shipping_Address_Same_As_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Same_As_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Make shipping address same as billing</inlineHelpText>
    <label>Shipping Address Same As Billing Address</label>
    <type>Checkbox</type>
</CustomField>