force-app/main/default/objects/Lead/fields/Sub_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source_Name__c</fullName>
    <label>Sub-Source Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>