force-app/main/default/objects/Lead/fields/Sub_Source_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Sub_Source_Phone_number__c</fullName>
    <label>Employee Phone No.</label>
    <type>Phone</type>
</CustomField>