force-app/main/default/objects/Lead/fields/Type_of_Customer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Customer__c</fullName>
    <label>Type of Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
                <isActive>false</isActive>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>Domestic</fullName>
                <isActive>false</isActive>
                <label>Domestic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>