force-app/main/default/objects/Lead/fields/Type_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Lead__c</fullName>
    <label>Type of Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Lead</fullName>
            </value>
            <value>
                <fullName>Cold Call Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>