force-app/main/default/objects/Lead/fields/ValidationBypass__c.field-meta.xml
<CustomField>
    <fullName>ValidationBypass__c</fullName>
    <formula>BLANKVALUE(validationBypassDate__c , $System.OriginDateTime) &gt; NOW() - 0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValidationBypass</label>
    <type>Checkbox</type>
</CustomField>