force-app/main/default/objects/Lead/fields/validationBypassDate__c.field-meta.xml
<CustomField>
    <fullName>validationBypassDate__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <label>validationBypassDate</label>
    <type>DateTime</type>
</CustomField>