force-app/main/default/objects/Lead/validationRules/BudgetryQuoteOnNewLeadCanNotBeTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>BudgetryQuoteOnNewLeadCanNotBeTrue</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() , Budgetary_Quote__c =TRUE)</errorConditionFormula>
    <errorMessage>Budgetry Quote Can not be Marked as True for New Lead</errorMessage>
</ValidationRule>