force-app/main/default/objects/Lead/validationRules/Call_center_users_validation_for_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Call_center_users_validation_for_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND
( $Profile.Name  = &apos;Call center users&apos;, 
  OR( ISCHANGED( FirstName ),
      ISCHANGED(  LastName ),
      ISCHANGED(Company  )
    ) 
)</errorConditionFormula>
    <errorDisplayField>Company</errorDisplayField>
    <errorMessage>You are not allowed to change Name and Company.</errorMessage>
</ValidationRule>