force-app/main/default/objects/Lead/validationRules/Currency_Cannot_beINR.validationRule-meta.xml
<ValidationRule>
    <fullName>Currency_Cannot_beINR</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ValidationBypass__c),
    NOT(ISPICKVAL( Lead_Source_Direct_Lead__c , &quot;Export&quot;)), 
    ISPICKVAL(CurrencyIsoCode, &quot;INR&quot;), 
    NOT(
        OR(
            CONTAINS(Country, &quot;India&quot;),
            CONTAINS(Country, &quot;Nepal&quot;), 
            CONTAINS(Country, &quot;Russia&quot;) 
        )
    )
)</errorConditionFormula>
    <errorMessage>If the currency is INR, the country must be set to India or select an appropriate country.</errorMessage>
</ValidationRule>