force-app/main/default/objects/Lead/validationRules/First_Name_Only_Character_Allow.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_Only_Character_Allow</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(FirstName,&quot;^[a-z  A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>You have entered an invalid format.</errorMessage>
</ValidationRule>