force-app/main/default/objects/Lead/validationRules/Last_Name_Only_Character_Allow.validationRule-meta.xml
<ValidationRule>
    <fullName>Last_Name_Only_Character_Allow</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(LastName,&quot;^[a-z A-Z]*$&quot;))</errorConditionFormula>
    <errorDisplayField>LastName</errorDisplayField>
    <errorMessage>You have entered an invalid format.</errorMessage>
</ValidationRule>