force-app/main/default/objects/Lead/validationRules/LeadSource_Should_Export.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSource_Should_Export</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISPICKVAL( Lead_Source_Direct_Lead__c , &quot;Export&quot;)),
NOT(ValidationBypass__c),
NOT(CONTAINS(Country, &quot;India&quot;))
)</errorConditionFormula>
    <errorDisplayField>Lead_Source_Direct_Lead__c</errorDisplayField>
    <errorMessage>Lead Source Should be Export if Country is other than India.</errorMessage>
</ValidationRule>