force-app/main/default/objects/Lead/validationRules/Manual_Lead_Converted_Status_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Lead_Converted_Status_Not_Allowed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ConversionCheck__c = FALSE,
ISPICKVAL(Status, &apos;Converted&apos;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Cannot set Lead Status to &apos;Converted&apos; directly.</errorMessage>
</ValidationRule>