force-app/main/default/objects/Lead/validationRules/Next_Follow_Up_date_cannot_pass_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Next_Follow_Up_date_cannot_pass_date</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
          AND(
                 ISNEW(),
                 NOT(ISBLANK(Next_Follow_up_Date_Time__c)),
                 Next_Follow_up_Date_Time__c &lt; NOW() ,
                 !ValidationBypass__c
             ),
            AND(
                 NOT(ISNEW()),
                 ISCHANGED(Next_Follow_up_Date_Time__c),
                 Next_Follow_up_Date_Time__c &lt; NOW(),
                 !ValidationBypass__c

              )
)</errorConditionFormula>
    <errorDisplayField>Next_Follow_up_Date_Time__c</errorDisplayField>
    <errorMessage>Next Follow Up Date Can Not be Back Dated.</errorMessage>
</ValidationRule>