force-app/main/default/objects/Lead/validationRules/Prevent_Backward_Status_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Backward_Status_Change</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Order_of_Status__c) &gt; Order_of_Status__c</errorConditionFormula>
    <errorMessage>You cannot move a lead to a previous status.</errorMessage>
</ValidationRule>