force-app/main/default/objects/Lead/validationRules/Shipping_Postal_Code_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Postal_Code_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    (ISBLANK(PostalCode) || NOT(REGEX(PostalCode, &quot;^[0-9]{6}$&quot;))),
    NOT(ValidationBypass__c),
    NOT(ISPICKVAL( Lead_Source_Direct_Lead__c , &quot;Export&quot;)),
      NOT($Profile.Name = &quot;CEO&quot;)
)</errorConditionFormula>
    <errorDisplayField>PostalCode</errorDisplayField>
    <errorMessage>Shipping Postal Code is Invalid Format</errorMessage>
</ValidationRule>