force-app/main/default/objects/Lead/validationRules/Valiation_on_Currency_if_Lsource_Export.validationRule-meta.xml
<ValidationRule>
    <fullName>Valiation_on_Currency_if_Lsource_Export</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL( Lead_Source_Direct_Lead__c , &quot;Export&quot;),
        NOT(ValidationBypass__c),
        ISPICKVAL(CurrencyIsoCode, &quot;INR&quot;),NOT(CONTAINS(Country,&quot;Nepal&quot;))
    ),
    AND(
        ISPICKVAL(Lead_Source_Direct_Lead__c , &quot;Export&quot;),
        NOT(ValidationBypass__c),
        NOT(ISPICKVAL(CurrencyIsoCode, &quot;INR&quot;)),
        CONTAINS(Country, &quot;India&quot;)
    )
)</errorConditionFormula>
    <errorMessage>Lead Currency cannot be set to INR and the Shipping Country cannot be India when the Lead Source is Export</errorMessage>
</ValidationRule>