force-app/main/default/objects/Lead/listViews/Actionplanqueue_Lead.listView-meta.xml
<ListView>
    <fullName>Actionplanqueue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Actionplanqueue</label>
    <queue>Actionplanqueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>