force-app/main/default/objects/Lead/listViews/Admin_Lead_List_View.listView-meta.xml
<ListView>
    <fullName>Admin_Lead_List_View</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Admin Lead List View</label>
    <sharedTo>
        <group>Admin_Group</group>
    </sharedTo>
</ListView>