force-app/main/default/objects/Lead/listViews/Domestic_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Domestic_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Domestic Lead Queue</label>
    <queue>Domestic_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>